--- a/index.css
+++ b/index.css
@@ -13,7 +13,31 @@ body {
     height: 100%;
 }
 
+#overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 1;
+}
+
+#options-wrapper {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+}
+
 #options {
+    position: absolute;
+    bottom: 30px;
+    right: 10px;
+    display: none;
+    z-index: 2;
     text-align: center;
 }
 
@@ -22,7 +46,8 @@ body {
 }
 
 #sliders {
-    width: 50%;
+    margin-top: 10px;
+    width: 100%;
     display: inline-block;
 }
 
